[package]
name = "mpa-reader"
version = "0.1.0"
authors = ["Björn Weinehall <bjorn.weinehall@intinor.se>"]
description = "Rust reader for MPEG-1 and MPEG-2 audio frames"
categories = [ "multimedia::audio", "parser-implementations" ]
keywords = [ "MPA", "MP2", "MPEG", "ISO-11172-3", "ISO-13818-3" ]
repository = "https://github.com/bjornwein/mpa-reader"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]
bitstream-io = "1.3.0"
hexdump = "0.1.0"
